--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -31,11 +31,26 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # Add Firebase pods
+  pod 'Firebase', '8.0.0'
+  pod 'Firebase/Messaging', '8.0.0'
+  # Add other Firebase service pods as needed
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+        target.build_configurations.each do |config|
+          config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+            '$(inherited)',
+          'PERMISSION_MEDIA_LIBRARY=1',
+          'PERMISSION_PHOTOS=1',
+          'PERMISSION_CAMERA=1',
+          'PERMISSION_NOTIFICATIONS=1',
+          ]
+    end
   end
 end
