--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,6 +5,9 @@ description: Demonstrates how to use the notification1 plugin.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+#set build name
+version: 1.0.0+1
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
