--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  qr_flutter: ^3.1.0
+  flutter_barcode_scanner: ^1.0.2
 
 dev_dependencies:
   flutter_test:
