--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.adeleyeayodeji.notification1">
+package="com.adeleyeayodeji.notification1">
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<!-- Permissions options for the `notification` group -->
+<uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 </manifest>
