--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   qr_flutter: ^3.1.0
   flutter_barcode_scanner: ^1.0.2
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
