--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     platforms:
-      android:
-        package: com.adeleyeayodeji.notification1
-        pluginClass: Notification1Plugin
+#      android:
+#        package: com.adeleyeayodeji.notification1
+#        pluginClass: Notification1Plugin
       ios:
         pluginClass: Notification1Plugin
 
